--- a/assets/css/stlye.css
+++ b/assets/css/stlye.css
@@ -1,31 +1,169 @@
 
-body {
+  body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.5;
+    background-color:  #800080;
   }
   
   a {
-    color: #333;
+    color:  #0d0c0c;
     text-decoration: none;
+    font-weight: bold;
   }
   
-  /* Header */
+  /* Header Section */
   
   header {
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     padding: 20px;
+    
+    text-align: right;
+    
   }
-  
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
+
   nav ul li {
     display: inline;
     margin-right: 20px;
+    
   }
   
+  /* Home Section */
+  
+  .myname {
+    text-align: center;
+    margin-top: 100px;
+  }
+  
+  .myname h1 {
+    font-size: 48px;
+    color: #ffffff;
+    margin-bottom: 10px;
+  }
+  
+  .myname h2 {
+    font-size: 24px;
+    margin-bottom: 30px;
+  }
+  
+  /* About Section */
+  
+  .about {
+    margin-top: 50px;
+    text-align: center;
+    padding: 0 20px;
+  }
+  
+  .about hr {
+    margin-bottom: 50px;
+  }
+  
+  .about p {
+    font-size: 18px;
+    line-height: 1.5;
+  }
+  
+  .about .image {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  
+  .about .profile {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    
+
+  }
+  
+  /* Projects Section */
+  
+  .projects {
+    margin-top: 50px;
+    text-align: center;
+    padding: 0 20px;
+  }
+  
+  .projects aside {
+    font-size: 24px;
+    margin-bottom: 30px;
+  }
+  
+  .projects .project-title {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 30px;
+  }
+  
+  .projects .project-title h4 {
+    font-size: 20px;
+  }
+  
+  .projects .project-info {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+ 
+  /* Contact Section */
+  
+  .contact {
+    text-align: center;
+    margin-top: 50px;
+  }
+  
+  .contact img {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 20px;
+  }
+  
+  /* Footer Section */
+  
+  footer {
+    background-color:  #ffffff;
+    padding: 20px;
+    text-align: center;
+    color:  #6e016e;
+  }
+  
+  footer p {
+    margin: 0;
+  }
+  
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* Media Queries */
+  
+/* changes the size of the webpage on desktop */
+  @media screen and (max-width :922px){
+    .body {
+        display:flex;
+        transform: translateX(150px);
+       
+    }
+  }
+/* changes the size of the webpage on mobile/tablet device */
+  @media screen and (max-width :768px){
+    .body {
+        display:flex;
+        transform: translateX(150px);
+       
+    }
+  }
+
+  @media screen and (max-width :576px){
+    .body {
+        display:flex;
+        transform: translateX(150px);
+       
+    }
+  }
